Update/search,detail

--- a/stores/templates/stores/search.html
+++ b/stores/templates/stores/search.html
@@ -71,73 +71,31 @@
             <h1> 찾고 있는 맛집 정보가 존재하지 않습니다. </h1>
     {% endif %}
 
-
+    <h1>"{{ search }}"  관련 리뷰 정보</h1>
     {% for review in reviews %}
-        {{ review.content }}
-        {{ review.rating }}
-        <a href="{% url 'stores:detail' review.store.pk %}">{{ review.store.name }}</a>
-    {% endfor %}
 
-    {% for tag in store.tags.all %}
-    <p>{{ tag.name }}</p>
-    {% endfor %}
+      <nav class="navbar bg-body-tertiary" style="width: 55rem;">
+        <div class="container">
+          <span class="navbar-text">
+            <p><span style="color: orange;">맛집 이름</span>  <span><a href="{% url 'stores:detail' review.store.pk %}">{{ review.store.name }}</a></span></p>
+            <p class="text-orange"><span style="color: orange;">리뷰 점수</span> {{ review.rate_to_star }}{{ review.rate_to_empty_star}}</p>
+            <p><span style="color: orange;">리뷰 내용</span> {{ review.content }}</p>
+          
+          
+          </span>
+        </div>
+      </nav>
+
+        
+        <hr>
+        {% endfor %}
+
 
 
 
 </main>
 
-{% comment %} pagination {% endcomment %}
-<div>
-  <ul class="pagination justify-content-center">
-    <li class="page-item">
-      <a class="page-link" href="?page=1">처음</a>
-    </li>
-    {% if stores.has_previous %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ stores.previous_page_number }}">
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-    {% else %}
-      <li class="page-item disabled">
-        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-    {% endif %}
-  
-    {% for page_number in stores.paginator.page_range %}
-      {% if page_number >= stores.number|add:-5 and page_number <= stores.number|add:5 %}
-        {% if page_number == stores.number %}
-          <li class="page-item active" aria-current="page">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
-          </li>
-        {% else %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
-          </li>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-  
-    {% if stores.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ stores.next_page_number }}">
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    {% else %}
-      <li class="page-item disabled">
-        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    {% endif %}
-    <li class="page-item">
-      <a class="page-link" href="?page={{ stores.paginator.num_pages }}">마지막</a>
-    </li>
-  </ul>
-</div>
+
 
 {% endblock content %}
 
