--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,8 +10,10 @@
             <img src="https://cdn.icon-icons.com/icons2/1893/PNG/512/scientistavatar_120780.png" style="width: 1.5rem; height: 1.5rem;">
           </button>
           <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenuButton" style="position:absolute; left:auto; right:0; width: 15rem; z-index: 10;">
+            {% comment %}             
             <li><a class="dropdown-item" href="#" style="font-size: xx-large;">ex) 조회 이력</a></li>
             <li><hr class="dropdown-divider"></li>
+            {% endcomment %}
             <li>
               <div class="container-fluid d-flex align-items-center">
                 <div class="container-fluid d-flex justify-content-center">
