--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,8 @@
 
     {% block content %}{% endblock content %}
 
+    {% include 'footer.html' %}
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     {% block script %}{% endblock script %}
 
