--- a/static/css/style.css
+++ b/static/css/style.css
@@ -164,6 +164,7 @@
   width: 90%;
   margin-left: 2rem;
   font-size: 2rem;
+  min-width: 40rem;
 }
 .store-info p {
   margin-bottom: 0;
@@ -230,6 +231,7 @@
   .store-info {
     order: 1;
     margin-right: 1.5rem;
+    min-width: 30rem;
   }
   .map-container {
     order: 2;
