--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -135,7 +135,7 @@
                   ({{ store.review_set.all|length }})
                 </span>
               </div>
-              <p class="card-text text-center">
+              <p class="card-text text-center text-secondary text-nowrap overflow-hidden">
                 {% if store.address %}
                 {{ store.address }}
                 {% else %}
