--- a/stores/templates/stores/all_stores.html
+++ b/stores/templates/stores/all_stores.html
@@ -68,7 +68,7 @@
 
 
 {% comment %} pagination {% endcomment %}
-<div>
+<div class="my-3">
   <ul class="pagination justify-content-center">
     <li class="page-item">
       <a class="page-link" href="?page=1">처음</a>
