--- a/stores/templates/stores/create.html
+++ b/stores/templates/stores/create.html
@@ -21,16 +21,16 @@
               <p class="text-orange">menu와 price:</p>
               {% for form in menu_formset.forms %}
               <div class="input-group mb-4 price-menu-input">
-                <span class="input-group-text fs-3">menu and price</span>
+                <span class="input-group-text fs-3">menu와 price</span>
                 {{ form.menu }}
                 {{ form.price }}
               </div>
               {% endfor %}
 
-              
-
             </ul>
-            <button type="submit" class="btn fs-4 py-0 position-absolute bottom-0 end-0 mb-4 me-4" style="background-color: orange; color: white;">가게 등록</button>
+            <div class="d-flex justify-content-end">
+              <button type="submit" class="btn fs-4 py-0 end-0 mb-4" style="background-color: orange; color: white;">가게 등록</button>
+            </div>
           </form>
         </div>
       </div>
